--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-973.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-215.8KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-850.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.12MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: cc4.qweasdzxc.gq, port: 45747, type: ss, cipher: chacha20-ietf-poly1305, password: 6ThhE43itV3}
+  - {name: 🇺🇸 美国-4.35MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.25MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30010, type: trojan, password: 666dcf90-7f85-4f30-a36f-c1bffcf06b32, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-795.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: 154.17.25.101, port: 63163, type: ss, cipher: aes-256-gcm, password: !<str> 49231199}
   - {name: 🇨🇦 加拿大-736.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-663.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇫🇷 法国-858.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-436.2KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇫🇷 法国-451.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-563.3KB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.53MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-973.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-850.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-795.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-736.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-663.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-858.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-451.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-563.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-973.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-850.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-795.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-736.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-663.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-858.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-451.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-563.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-973.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-850.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-795.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-736.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-663.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-858.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-451.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-563.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-973.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-850.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-795.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-736.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-663.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-858.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-451.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-563.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-973.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-850.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-795.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-736.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-663.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-858.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-451.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-563.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-973.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-850.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-795.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-736.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-663.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-858.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-451.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-563.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-973.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-215.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-850.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-795.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-736.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-663.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇫🇷 法国-858.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-451.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-563.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
