--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-858.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-563.3KB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
   - {name: 🇫🇷 法国-525.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-602.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-436.2KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇬🇧 英国-838.3KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 未知国家-2.22MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
-  - {name: 🇨🇳 中国-5.71MB/s(Youtube:不良林), server: rr006.zhuan666.top, port: 11206, type: ss, cipher: chacha20-ietf-poly1305, password: 8c313190-4d93-43f3-b557-fe0ffe4c260a}
-  - {name: 🇨🇳 中国-510.9KB/s(Youtube:不良林), server: dd004.zhuan666.top, port: 11604, type: ss, cipher: chacha20-ietf-poly1305, password: 8c313190-4d93-43f3-b557-fe0ffe4c260a}
   - {name: 🇫🇷 法国-829.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-11.31MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30010, type: trojan, password: 666dcf90-7f85-4f30-a36f-c1bffcf06b32, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-838.3KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.31MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇳 中国-7.37MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30010, type: trojan, password: 666dcf90-7f85-4f30-a36f-c1bffcf06b32, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-540.7KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-375.8KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-858.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-563.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-525.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-602.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-838.3KB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.9KB/s(Youtube:不良林)
       - 🇫🇷 法国-829.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-838.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-858.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-563.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-525.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-602.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-838.3KB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.9KB/s(Youtube:不良林)
       - 🇫🇷 法国-829.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-838.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-858.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-563.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-525.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-602.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-838.3KB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.9KB/s(Youtube:不良林)
       - 🇫🇷 法国-829.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-838.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-858.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-563.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-525.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-602.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-838.3KB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.9KB/s(Youtube:不良林)
       - 🇫🇷 法国-829.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-838.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-858.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-563.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-525.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-602.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-838.3KB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.9KB/s(Youtube:不良林)
       - 🇫🇷 法国-829.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-838.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-858.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-563.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-525.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-602.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-838.3KB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.9KB/s(Youtube:不良林)
       - 🇫🇷 法国-829.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-838.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-858.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-563.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-525.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-602.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-838.3KB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.9KB/s(Youtube:不良林)
       - 🇫🇷 法国-829.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.31MB/s(Youtube:不良林)
+      - 🇬🇧 英国-838.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
